# affine

./: .env.example  .env.local  .gitignore  Dockerfile  INSTALL.md  README.md  TESTING_GUIDE.md  WORKFLOW.md  docker-compose.backend.local.yml  docker-compose.backend.yml  docker-compose.local.yml  docker-compose.verification.yml  docker-compose.yml  docker-verification.sh  fix_explanation.md  llms.txt  modify_readme.py  pyproject.toml  test_affinetes_usage.py  verify_readme.py
.github/workflows/: ci.yml  code-quality.yml  docker-test.yml  main.yml  unit-test.yml
affine/: __init__.py  af_logging.py  cal_weights.py  chutes.py  cli.py  config.py  core.py  database.py  deployment.py  duel.py  envs.py  evaluator.py  http_client.py  lium_backend.py  miners.py  mining.py  models.py  network.py  pyproject.toml  query.py  runner.py  runner_uids.py  sampling.py  set_weights.py  setup.py  signer.py  storage.py  system.py  tasks.py  utils.py  val_config.py  validate_from_r2.py  validation.py  validator.py  validators.py  weights.py
affine-data/: affine_index.json  index.json  local_miners.json
affine/api/: config.py  dependencies.py  middleware.py  models.py  server.py
affine/backend/: config.py
affine/cli/: main.py
affine/core/: __init__.py  environments.py  hashing.py  http_client.py  judge.py  miners.py  models.py  rng.py  sampling_list.py  setup.py  types.py  wilson.py
affine/database/: README.md  base_dao.py  cli.py  manage_gsi.py  migrate.py  schema.py  system_config.json  tables.py
affine/duel/: __init__.py  aggregate.py  arena.py  ratio.py
affine/envs/: COIN.py  SAT.py  SAT1.py  __init__.py  _utils.py  abd.py  base.py  coin.py  ded.py  elr.py  executor.py  gpqa.py  hvm.py  mth.py  mult8.py  multiturn.py  pyi.py  qs_orchestrator.py  reasoning_gym.py  registry.py  remote.py  remote_qs.py  sat.py  tictactoe.py  utils.py
affine/miners/: __init__.py  chutes_client.py
affine/net/: bittensor.py
affine/quixand/: errors.py  serve_evaluator_only.py
affine/scheduler/: __init__.py  api.py  config.py  error_classifier.py  initializer.py  models.py  monitor.py  queue.py  (+3 more)
compose/: docker-compose.api.local.yml  docker-compose.api.yml  docker-compose.backend.local.yml  docker-compose.backend.yml
docs/: SAMPLING_SCHEDULER.md  VALIDATOR.md
examples/: sdk.py  sdk2.py
gradients/: TRAINING_ON_GRADIENTS.md  __init__.py  generate_grpo_data.py  generate_sft_data.py  models.py
plan/: extension1.md  extension2.md  extension3.md  original.md  spec1.md  spec2.md  spec3.md  spec4.md  spec5.md  spec6.md  spec7.md
scripts/: __init__.py  deps.py  evaluate_local_model.py  irt_sim.py  lint.py  prune_hotkeys.py  random_row.py  smoke_test_affine_hippius.py  test.py  test_download_dataset.py  test_hippius.py  test_rollouts_upload_download.py  test_runner_like_e2e.py  test_runner_mock_s3.py  upload_dataset.py  upload_dataset_to_r2.py  upload_fake_dataset_to_r2.py
test/: test_reasoning_gym.py
tests/: test_blocks.py  test_duel.py  test_envs.py  test_error_handling.py  test_profiles.py  test_validators.py  test_wilson.py
testsuite/: README.md  conftest.py  runner.py  test_integration_docker_compose.py  test_unit_example.py
(+148 files in other folders)
