[project]
name = "affine"
version = "0.1.0"
description = "Anima Machina"
authors = [{ name = "affine", email = "affine@affine.io" }]
dependencies = [
    "python-dotenv>=0.21.0",
    "bittensor",
    "bittensor-cli",
    "chutes",
    "aiohttp>=3.10.11",
    "ipykernel>=6.0.0",
    "click>=8.0.0",
    "click-log>=0.4.0",
    "alive_progress>=3.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24",
    "redis==5.*",
    "boto3>=1.34",
    "huggingface_hub",
    "datasets",
    "aiobotocore>=2.23.0",
    "botocore>=1.38.27",
    "tabulate>=0.9.0",
    "prometheus-client>=0.21.0",
]
readme = "README.md"
requires-python = ">=3.9,<3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "requests>=2.28.0",
    "testcontainers>=3.7.0",
]

[project.scripts]
af = "affine:cli"
test = "scripts.test:main"
lint = "scripts.lint:fix"
lint-check = "scripts.lint:check"
format = "scripts.lint:format"
format-check = "scripts.lint:format_check"
deps-check = "scripts.deps:check"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["affine", "scripts"]

[tool.uv.sources]
affine = { path = ".", editable = true }

[tool.pytest.ini_options]
testpaths = ["testsuite"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "unit: marks tests as unit tests (fast)",
]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-ra",
    "-s",
    "--capture=no",
]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.core.waiting_utils",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "requests>=2.28.0",
    "testcontainers>=3.7.0",
    "deptry>=0.20.0",
]

